--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             </h1>
         </header>
         <main>
-            Welcome to week one of web dec 2 motha trucka!
+            Welcome to week one of Web Dev 2 motha trucka!
         </main>
    </div> 
 </body>
