--- a/index.html
+++ b/index.html
@@ -4,17 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Week One Demo</title>
+    <link rel="stylesheet" href="css/main.css">
+    <title>Sabrina Oursin</title>
 </head>
 <body>
    <div class="wrapper">
         <header>
             <h1>
-                 Week One Demo
+                 Sabrina Oursin
             </h1>
         </header>
         <main>
-            Welcome to week one of Web Dev 2 motha trucka!
+            <img src="images/FB_IMG_1681482631860.jpg" alt="Picture of Sabrina Oursin">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat itaque quas amet obcaecati in! Blanditiis distinctio iusto ad sequi quaerat unde eaque quibusdam doloribus at atque laboriosam facere, sit consequatur!</p>
+            <p>Officiis, aliquam adipisci! Labore, doloribus tempora. Deleniti quas aliquam debitis beatae eveniet expedita totam. Mollitia provident, et excepturi, autem, accusantium nam ipsum vitae quibusdam reprehenderit eveniet ratione earum similique nemo!</p>
+            <dl>
+                <dt>Program</dt>
+                <dd>Interactive Media Design</dd>
+                <dt>Course</dt>
+                <dd>MTM6201 - Web Dev II</dd>
+                <dt>Hobbies</dt>
+                <dd>Volleyball, Call of Duty, Walking My Dog</dd>
+            </dl>
         </main>
    </div> 
 </body>
