--- a/index.html
+++ b/index.html
@@ -15,17 +15,21 @@
             </h1>
         </header>
         <main>
-            <img src="images/FB_IMG_1681482631860.jpg" alt="Picture of Sabrina Oursin">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat itaque quas amet obcaecati in! Blanditiis distinctio iusto ad sequi quaerat unde eaque quibusdam doloribus at atque laboriosam facere, sit consequatur!</p>
-            <p>Officiis, aliquam adipisci! Labore, doloribus tempora. Deleniti quas aliquam debitis beatae eveniet expedita totam. Mollitia provident, et excepturi, autem, accusantium nam ipsum vitae quibusdam reprehenderit eveniet ratione earum similique nemo!</p>
-            <dl>
-                <dt>Program</dt>
-                <dd>Interactive Media Design</dd>
-                <dt>Course</dt>
-                <dd>MTM6201 - Web Dev II</dd>
-                <dt>Hobbies</dt>
-                <dd>Volleyball, Call of Duty, Walking My Dog</dd>
-            </dl>
+            <div>
+                <img src="images/FB_IMG_1681482631860.jpg" alt="Picture of Sabrina Oursin">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat itaque quas amet obcaecati in! Blanditiis distinctio iusto ad sequi quaerat unde eaque quibusdam doloribus at atque laboriosam facere, sit consequatur!</p>
+                <p>Officiis, aliquam adipisci! Labore, doloribus tempora. Deleniti quas aliquam debitis beatae eveniet expedita totam. Mollitia provident, et excepturi, autem, accusantium nam ipsum vitae quibusdam reprehenderit eveniet ratione earum similique nemo!</p>
+            </div>
+            <div>
+                <dl>
+                    <dt>Program</dt>
+                    <dd>Interactive Media Design</dd>
+                    <dt>Course</dt>
+                    <dd>MTM6201 - Web Dev II</dd>
+                    <dt>Hobbies</dt>
+                    <dd>Volleyball, Call of Duty, Walking My Dog</dd>
+                </dl>
+            </div>
         </main>
    </div> 
 </body>
