--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <main>
             <div>
                 <img src="images/FB_IMG_1681482631860.jpg" alt="Picture of Sabrina Oursin">
-                <p>Good Day there! My name is Sabrina Oursin, I am 39 years old and have been working in customer service for over 20 years! I currently serve at a busy brunch restaurant. I am in the middle of the best mid life crisis ever! One where I reinvent myself in positive and practical ways. </p>
+                <p>Oh hey there! My name is Sabrina Oursin, I am 39 years old born and raised in Canada. </p>
                 <p>Officiis, aliquam adipisci! Labore, doloribus tempora. Deleniti quas aliquam debitis beatae eveniet expedita totam. Mollitia provident, et excepturi, autem, accusantium nam ipsum vitae quibusdam reprehenderit eveniet ratione earum similique nemo!</p>
             </div>
             <div>
